GNOME Bugzilla – Bug 631825
Calibration won't start, argyll gets stuck
Last modified: 2011-10-03 07:54:53 UTC
Created attachment 172054 [details] argyll waiting for key press Hi, Using GCM 2.32.0 on Ubuntu Maverick (10.10), it seems calibration does not start, because Argyll is waiting for someone to press enter... When I open the VTE and press enter, the calibration _does_ continue... I do not have this issue on Ubuntu Lucid (10.04) using GCM 2.32.0, so I'm guessing this is some libvte misery?
These are my libvte versions: ii libvte-common 1:0.26.0-0ubuntu1 ii libvte-dev 1:0.26.0-0ubuntu1 ii libvte9 1:0.26.0-0ubuntu1
If you open the VTE, and press " " (single space) does argyll also continue? We're correctly noticing that argyll needs input, and is sending a space. It appears argyll is refusing to play ball :-)
Nope... Pressing ENTER does do the trick however...
Created attachment 172164 [details] [review] test patch Could you try this patch please. Thanks.
Works... well at least in the first instance, since this problem exist for both dispcal and dispread...
Created attachment 172240 [details] [review] test patch Can you try this patch please, and check that the whole calibration succeeds. I'm really annoyed that you can't now press space for "any" key in newer versions of argyll. Thanks dude.
Seems to work... Tested with both the Huey and the ColorMunki. I did manually try dispcal, which _does_ continue when space is pressed, so I guess this isn't argyll's fault.
I can confirm both the problem (I have the Huey, too) and that the patch works (for me), the whole calibration succeeds and the result seems to be okay (similar to the result I got when I've manually used argyll). Is there any reason why this patch hasn't been applied yet? I can imagine that you don't consider it the prettiest fix, but it works and shouldn't cause any problems for other versions of argyll.
(In reply to comment #8) > I can confirm both the problem (I have the Huey, too) and that the patch works > (for me), the whole calibration succeeds and the result seems to be okay > (similar to the result I got when I've manually used argyll). Is there any > reason why this patch hasn't been applied yet? I can imagine that you don't > consider it the prettiest fix, but it works and shouldn't cause any problems > for other versions of argyll. Agreed. I've pushed this to gnome-3-2 and master.