Do not send 'space' when argyllcms asks the user to press any key

Resolves https://bugzilla.gnome.org/show_bug.cgi?id=631825